Adds text-size utilities and removes unused css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,23 @@ body {
 html {
   font-size: 14px;
 }
+
+.text-1 {
+  font-size: 1rem;
+}
+
+.text-2 {
+  font-size: 1.25rem;
+}
+
+.text-3 {
+  font-size: 1.5rem;
+}
+
+.text-4 {
+  font-size: 1.75rem;
+}
+
+.text-5 {
+  font-size: 2rem;
+}
