--- a/app/views/admin/searches/_user_form.html.erb
+++ b/app/views/admin/searches/_user_form.html.erb
@@ -10,7 +10,7 @@
                          include_blank: false,
                          label: User.human_attribute_name(:presence),
                          required: false) %>
-  <%= f.button(:submit, t('.search'), class: 'small') %>
+  <%= f.button(:submit, t('.search'), class: 'small m-0 ml-2') %>
 <% end %>
 
 <br />
