--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-8 offset-md-2 col-xs-12">
-  <div class="margin-bottom-20 user">
+  <div class="mb-2 user">
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <%= link_to(t('user.profile'),
