--- a/app/assets/stylesheets/partials/_votes.scss
+++ b/app/assets/stylesheets/partials/_votes.scss
@@ -1,44 +1,6 @@
 .vote {
-  &.status {
-    text-align: center;
-
-    .counter {
-      font-size: 30px;
-      font-weight: 400;
-      margin-bottom: 10px;
-    }
-
-    .current {
-      display: block;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 25px;
-      margin-bottom: 5px;
-      margin-top: 5px;
-    }
-
-    .large {
-      color: $main-color;
-      display: block;
-      font-size: 50px;
-    }
-
-    .fa-agenda::before {
-      content: "§";
-      font-weight: bold;
-    }
-
-    .refresh {
-      font-size: 20px;
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-  }
-
-  &.agenda {
-    display: block;
-    margin-bottom: 10px;
+  &.button {
+    width: 87px;
   }
 
   .missing {
@@ -50,46 +12,10 @@
       font-size: 20px;
     }
   }
+}
 
-  .not-present {
-    font-size: 20px;
-
-    i {
-      color: $red;
-      font-size: 26px;
-    }
-  }
-
-  .present {
-    font-size: 20px;
-
-    i {
-      color: $green;
-      font-size: 26px;
-    }
-  }
-
-  .choices,
-  .vote-count {
-    display: block;
-
-    .title {
-      display: block;
-    }
-
-    .value {
-      display: block;
-      font-size: 18px;
-    }
-
-  }
-
-  &.margin {
-    margin-bottom: 15px;
-    margin-top: 15px;
-  }
-
-  &.button {
-    width: 87px;
+.fa-agenda {
+  &::before {
+    content: '§';
   }
 }
