--- a/app/views/admin/votes/_form.html.erb
+++ b/app/views/admin/votes/_form.html.erb
@@ -1,22 +1,21 @@
-<%= simple_form_for [:admin, @vote] do |f| %>
+<%= simple_form_for [:admin, vote] do |f| %>
   <%= f.input :title %>
-  <%= f.association :agenda, collection: Agenda.by_index, label_method: :to_s  %>
+  <%= f.association :sub_item, collection: SubItem.all, label_method: :to_s  %>
   <%= f.input :choices, as: :integer, input_html: { min: '1'} %>
   <div class="card">
-    <div class="card-header"><%= t('vote.options') %></div>
+    <div class="card-header"><%= t('.options') %></div>
     <div class="card-body">
       <div id="vote_options">
         <%= f.simple_fields_for :vote_options do |v| %>
-          <%= render 'vote_option_fields', :f => v %>
+          <%= render 'vote_option_fields', f: v %>
         <% end %>
       </div>
-      <div class="panel-body" id="links">
-        <%= link_to_add_association t('vote.add_option'), f, :vote_options, class: 'btn secondary' %>
+      <div class="panel-body mt-2" id="links">
+        <%= link_to_add_association t('.add_option'), f, :vote_options, class: 'btn secondary' %>
       </div>
     </div>
   </div>
   <div class="table">
     <%= f.button :submit, class: 'btn primary' %>
-    <%= link_to t('vote.admin_votes'), admin_votes_path, class: 'btn secondary' %>
   </div>
 <% end %>
