--- a/app/views/admin/votes/edit.html.erb
+++ b/app/views/admin/votes/edit.html.erb
@@ -1,9 +1,16 @@
-<% provide(:title, t('vote.admin_votes')) %>
-<div class="col-md-6 offset-md-3 col-sm-12 reg-page">
+<div class="col-12">
   <div class="headline">
-    <h1><%= t('vote.edit_vote') %></h1>
+    <h1><%= title(t('.title')) %></h1>
   </div>
-  <%= render 'form' %>
-  <hr>
-  <%= link_to(t('vote.show'), admin_vote_path(@vote), class: 'btn secondary') %>
+</div>
+
+<div class="col-12 col-md-3">
+  <%= link_to(t('.all_votes'),
+              admin_votes_path, class: 'btn secondary') %>
+  <%= link_to(t('.show'), admin_vote_path(@vote), class: 'btn secondary') %>
+  <hr />
+</div>
+
+<div class="col-12 col-md-9">
+  <%= render 'form', vote: @vote %>
 </div>
