--- a/app/views/admin/votes/show.html.erb
+++ b/app/views/admin/votes/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, t('vote.admin_votes')) %>
+<% title(t('.title')) %>
 <div class="headline">
   <h1>
     <%= @vote.title %>
@@ -7,108 +7,108 @@
 </div>
 
 <div class="row">
-<div class="col-md-2 col-sm-12 vote margin">
-  <span class="choices">
-    <span class="title">
-    <%= Vote.human_attribute_name(:choices) %>
+  <div class="col-md-2 col-sm-12 vote mb-3">
+    <span class="d-block choices">
+      <span class="d-block">
+      <%= Vote.human_attribute_name(:choices) %>
+      </span>
+      <span class="text-3">
+        <%= fa_icon('hashtag') %> <%= @vote.choices %>
+      </span>
     </span>
-    <span class="value">
-      <%= fa_icon('hashtag') %> <%= @vote.choices %>
-    </span>
-  </span>
-  <br>
+    <br>
 
-  <% unless @vote.future? %>
-  <span class="vote-count">
-    <span class="title">
-      <%= t('vote.number_of_votes') %>
+    <% unless @vote.future? %>
+    <span class="vote-count d-block mb-3">
+      <span class="d-block">
+        <%= t('.number_of_votes') %>
+      </span>
+
+      <span class="text-3">
+        <%= number_of_votes(@vote) %>
+      </span>
     </span>
 
-    <span class="value">
-      <%= number_of_votes(@vote) %>
+    <span class="d-block text-2">
+      <%= link_to(refresh_count_admin_vote_path(@vote), remote: true, method: :post) do %>
+        <%= fa_icon('refresh') %>
+        <%= t(:update) %>
+      <% end %>
     </span>
-  </span>
-
-  <span class="refresh">
-    <%= link_to(refresh_count_admin_vote_path(@vote), remote: true, method: :post) do %>
-      <%= fa_icon('refresh') %>
-      <%= t(:update) %>
     <% end %>
-  </span>
-  <% end %>
-</div>
+  </div>
 
-<div class="col-md-9 col-sm-12 vote margin">
-
-  <% if !@vote.closed? %>
-    <i><%= t('vote.still_open') %></i>
-    <ul class="list">
-      <% @vote.vote_options.order(:created_at).with_deleted.each do |v| %>
-        <li><b><%= vote_option_str(v) %></b></li>
-      <% end %>
-    </ul>
-  <% else %>
-    <div class="headline">
-      <h2><%= t('vote.results') %></h2>
-    </div>
-    <table class="table table-bordered table-striped">
-      <% @vote.vote_options.order_all.each do |v| %>
+  <div class="col-md-9 col-sm-12 vote mb-3">
+    <% if !@vote.closed? %>
+      <i><%= t('.still_open') %></i>
+      <ul class="list">
+        <% @vote.vote_options.order(:created_at).with_deleted.each do |v| %>
+          <li><b><%= vote_option_str(v) %></b></li>
+        <% end %>
+      </ul>
+    <% else %>
+      <div class="headline">
+        <h2><%= t('.results') %></h2>
+      </div>
+      <table class="table table-bordered table-striped">
+        <% @vote.vote_options.order_all.each do |v| %>
+          <tr>
+            <td><b><%= vote_option_str(v) %></b></td>
+            <td><b><%= v.count %></b></td>
+          </tr>
+        <% end %>
         <tr>
-          <td><b><%= vote_option_str(v) %></b></td>
-          <td><b><%= v.count %></b></td>
+          <td><i><%= t('.sum_votes_blank') %></i></td>
+          <td><i><%= vote_stats(@vote) %></i></td>
         </tr>
-      <% end %>
-      <tr>
-        <td><i><%= t('vote.sum_votes_blank') %></i></td>
-        <td><i><%= vote_stats(@vote) %></i></td>
-      </tr>
-    </table>
+      </table>
 
-    <table class="table table-bordered table-striped">
-      <tr>
-        <td><%= t('vote.simple_majority') %></td>
-        <td><%= @vote.vote_posts.count.fdiv(2).ceil %> röster</td>
-      </tr>
-      <tr>
-        <td><%= t('vote.2_3_majority') %></td>
-        <td><%= (@vote.vote_posts.count.fdiv(3)*2).ceil %> röster</td>
-      </tr>
-    </table>
-  <% end %>
-</div>
-
-<div class="col-md-1 col-sm-12 vote margin">
-  <%= vote_state_link(@vote, type: 'btn primary vote button') %>
-
-  <% unless @vote.open? %>
-    <%= link_to(t('vote.edit'), edit_admin_vote_path(@vote),
-                class: 'btn secondary vote button') %>
-    <%= button_to(t('vote.reset'), admin_vote_reset_path(@vote),
-                class: 'btn danger vote button',
-                data: { confirm: t('vote.confirm_reset') }) %>
-  <% end %>
-</div>
-
-<div class="col md-12 col-sm-12 vote margin">
-  <%= link_to(t('vote.admin_votes'), admin_votes_path,
-                                     class: 'btn primary') %>
-</div>
-
-<div class="col-md-12 col-sm-12">
-  <div class="headline">
-    <h2><%= t('vote.status') %></h2>
+      <table class="table table-bordered table-striped">
+        <tr>
+          <td><%= t('.simple_majority') %></td>
+          <td><%= @vote.vote_posts.count.fdiv(2).ceil %> röster</td>
+        </tr>
+        <tr>
+          <td><%= t('.2_3_majority') %></td>
+          <td><%= (@vote.vote_posts.count.fdiv(3)*2).ceil %> röster</td>
+        </tr>
+      </table>
+    <% end %>
   </div>
 
-  <div class="vote status" id="vote-status" data-position="vote-show">
-    <%= render '/admin/votes/status', vote_status_view: @vote_status %>
-  </div>
-</div>
+  <div class="col-md-1 col-sm-12 vote my-3">
+    <%= vote_state_link(@vote, type: 'btn primary vote button') %>
 
-<div class="col-md-12 col-sm-12">
-  <div class="headline">
-    <h2><%= models_name(Audit) %></h2>
+    <% unless @vote.open? %>
+      <%= link_to(t('.edit_vote'), edit_admin_vote_path(@vote),
+                  class: 'btn secondary vote button') %>
+      <%= button_to(t('.reset_vote'), admin_vote_reset_path(@vote),
+                  class: 'btn danger vote button',
+                  data: { confirm: t('.confirm_reset') }) %>
+    <% end %>
   </div>
 
-  <%= render '/admin/audits/log', primary: Vote, secondary: User, audits: @audits %>
-</div>
+  <div class="col md-12 col-sm-12 vote my-3">
+    <%= link_to(t('.all_votes'), admin_votes_path,
+                                 class: 'btn primary') %>
+  </div>
+
+  <div class="col-md-12 col-sm-12">
+    <div class="headline">
+      <h2><%= t('.status') %></h2>
+    </div>
+
+    <div class="vote status" id="vote-status" data-position="vote-show">
+      <%= render '/admin/votes/status', vote_status_view: @vote_status %>
+    </div>
+  </div>
+
+  <div class="col-md-12 col-sm-12">
+    <div class="headline">
+      <h2><%= models_name(Audit) %></h2>
+    </div>
+
+    <%= render '/admin/audits/log', primary: Vote, secondary: User,
+                                    audits: @audits %>
+  </div>
 </div>
