--- a/app/views/application/_menu.html.erb
+++ b/app/views/application/_menu.html.erb
@@ -8,7 +8,7 @@
     <ul class="dropdown-menu" aria-labelledby="dropdown-info">
       <li><%= link_to(t('.about'), about_path, class: 'dropdown-item') %></li>
       <li><%= link_to(t('.contact'), contacts_path, class: 'dropdown-item') %></li>
-      <li><%= link_to(t('.agenda'), agendas_path, class: 'dropdown-item') %></li>
+      <li><%= link_to(t('.agenda'), items_path, class: 'dropdown-item') %></li>
       <li><%= link_to(t('.terms'), terms_path, class: 'dropdown-item') %></li>
     </ul>
   </li>
