--- a/app/views/admin/attendances/index.html.erb
+++ b/app/views/admin/attendances/index.html.erb
@@ -1,19 +1,14 @@
-<div class="headline">
-  <h1><%= t('.title') %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= t('.title') %></h1>
+  </div>
 </div>
-<div class="col-md-12">
-  <% if can_administrate? :manage_voting, User %>
-    <%= link_to t('.manage_users'), admin_vote_users_path, class: 'btn primary' %>
-  <% end %>
-  <% if can_administrate? :manage, Vote %>
-    <%= link_to t('.manage_voting'), admin_votes_path, class: 'btn secondary' %>
-  <% end %>
-  <% if can_administrate? :manage, Agenda %>
-    <%= link_to t('.manage_agenda'), admin_agendas_path, class: 'btn secondary' %>
-  <% end %>
+<div class="col-12 col-md-3">
+  <%= render('application/admin_sidebar', current: :attendances) %>
+  <hr />
   <%= link_to t('.export'), admin_attendances_path(format: :csv), class: 'btn secondary' %>
 </div>
-<div class="col-md-12">
+<div class="col-12 col-md-9">
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
