--- a/app/views/admin/votes/index.html.erb
+++ b/app/views/admin/votes/index.html.erb
@@ -1,19 +1,16 @@
-<div class="headline">
-  <h1><%= title(t('.title')) %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= title(t('.title')) %></h1>
+  </div>
 </div>
 
-<div class="col-md-12">
+<div class="col-12 col-md-3 mb-2">
+  <%= render('application/admin_sidebar', current: :votes) %>
+  <hr />
   <%= link_to t('.new_vote'), new_admin_vote_path, class: 'btn primary' %>
-  <% if can_administrate? :manage, User %>
-    <%= link_to t('.manage_vote_users'), admin_vote_users_path, class: 'btn secondary' %>
-  <% end %>
-  <% if can_administrate? :manage, Item %>
-    <%= link_to t('.manage_agenda'), admin_items_path, class: 'btn secondary' %>
-  <% end %>
-  <hr>
 </div>
 
-<div class="col-md-12 vote status" id="vote-status">
+<div class="col-12 col-md-9" id="vote-status">
   <%= render '/admin/votes/status', vote_status_view: @vote_status_view %>
 </div>
 
