--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -14,8 +14,8 @@
           <li class="nav-item dropdown">
             <%= menu_dropdown_link(current_user) %>
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-info">
-              <li><%= link_to t('.settings'), :user, class: 'dropdown-item' %></li>
-              <li><%= link_to t('devise.sign_out'), :destroy_user_session, method: :delete, class: 'dropdown-item' %></li>
+              <li><%= link_to t('.settings'), user_path, class: 'dropdown-item' %></li>
+              <li><%= link_to t('devise.sign_out'), destroy_user_session_path, method: :delete, class: 'dropdown-item' %></li>
             </ul>
           </li>
         <% else %>
