--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,6 @@
       </div>
     </main>
 
-    <%= render '/application/copyright' %>
+    <%= render '/application/footer' %>
   </body>
 </html>
