--- a/app/views/news/_news.html.erb
+++ b/app/views/news/_news.html.erb
@@ -1,11 +1,11 @@
-<div class="news">
+<div class="mb-3 pb-3">
   <div class="headline">
     <h3><%= news.title %></h3>
   </div>
 
-  <div class="info">
+  <div>
     <%= news_user(news) %>
-    <span class="date">
+    <span class="d-inline font-italic ml-2">
       <%= l(news.created_at) %>
     </span>
   </div>
