--- a/app/views/message_mailer/email.html.erb
+++ b/app/views/message_mailer/email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h2><%= t('contact.message_sent_via') %></h2>
+    <h2><%= t('.sent_via') %></h2>
     <table>
       <tr>
         <td><%= Message.human_attribute_name(:name) %></td>
