--- a/app/views/admin/news/new.html.erb
+++ b/app/views/admin/news/new.html.erb
@@ -1,12 +1,14 @@
-<div class="headline">
-  <h1><%= t('.title') %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= t('.title') %></h1>
+  </div>
 </div>
 
-<div class="col-md-2 col-sm-12">
+<div class="col-12 col-md-2">
   <%= link_to(t('.all_news'),
               admin_news_index_path, class: 'btn secondary') %>
 </div>
 
-<div class="col-md-10 col-sm-12">
+<div class="col-12 col-md-10">
   <%= render 'form', news: @news %>
 </div>
