--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,5 @@
-<% title(models_name(User)) %>
 <div class="headline">
-  <h1><%= t('user.admin_index') %></h1>
+  <h1><%= title(t('.title')) %></h1>
 </div>
 
 <div class="row">
