--- a/app/views/users/_confirm_information.html.erb
+++ b/app/views/users/_confirm_information.html.erb
@@ -7,7 +7,7 @@
 
     <span class="text-3 d-block">
       <% if current_user.card_number.present? %>
-        <%= fa_icon('check-circle-o', class: 'text-succes text-4 mr-1') %>
+        <%= fa_icon('check-circle-o', class: 'text-success text-4 mr-1') %>
         <%= t('.card_number_present') %>
       <% else %>
         <%= fa_icon('times-circle-o', class: 'text-danger text-4 mr-1') %>
