--- a/app/views/admin/adjustments/edit.html.erb
+++ b/app/views/admin/adjustments/edit.html.erb
@@ -1,16 +1,16 @@
-<div class="headline">
-  <h1><%= t('.title') %></h1>
+<div class="col-12">
+  <div class="headline">
+    <h1><%= t('.title') %></h1>
+  </div>
 </div>
 
-<div class="row">
-  <div class="col-12 col-md-2">
-    <%= link_to(t('.all_adjustments'),
-                admin_vote_users_path, class: 'btn secondary') %>
-    <%= link_to(t('.vote_user'),
-                admin_vote_user_path(@adjustment.user), class: 'btn secondary') %>
-  </div>
+<div class="col-12 col-md-2">
+  <%= link_to(t('.all_adjustments'),
+              admin_vote_users_path, class: 'btn secondary') %>
+  <%= link_to(t('.vote_user'),
+              admin_vote_user_path(@adjustment.user), class: 'btn secondary') %>
+</div>
 
-  <div class="col-12 col-md-10">
-    <%= render 'form', adjustment: @adjustment %>
-  </div>
+<div class="col-12 col-md-10">
+  <%= render 'form', adjustment: @adjustment %>
 </div>
