--- a/app/views/admin/news/_form.html.erb
+++ b/app/views/admin/news/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for([:admin, news]) do |f| %>
   <%= f.input :title %>
-  <%= f.input :content, as: :pagedown, input_html: { preview: true, rows: 10 } %>
+  <%= f.input :content, as: :text, input_html: { class: 'markdown', rows: 10 } %>
   <%= f.input :url %>
   <%= f.button :submit %>
 <% end %>
