Change title of Agenda page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,6 @@
-
 <div class="col">
   <div class="headline">
-    <h1><%= t('agenda.name') %></h1>
+    <h1><%= title(t('.title')) %></h1>
   </div>
   <div class="list-group">
     <% @items.each do |item| %>
