--- a/app/assets/stylesheets/style/forms.scss
+++ b/app/assets/stylesheets/style/forms.scss
@@ -2,7 +2,7 @@
   box-shadow: none;
 
   &:focus {
-    border-color: $main-color;
+    border-color: theme-color('primary');
     box-shadow: none;
   }
 }
