--- a/app/assets/stylesheets/colors.scss.erb
+++ b/app/assets/stylesheets/colors.scss.erb
@@ -1,34 +1,7 @@
-// See http://sachagreif.com/sass-color-variables
-
-// Color definitions
-$main-color: <%= Settings.css.main_color %>;
-$main-color-hover: <%= Settings.css.hover_color %>;
-$highlight-color: <%= Settings.css.highlight_color %>;
-
-
-$black: #000;
-$white: #fff;
-$grey: #555;
-$green: #4e9d2d;
-$red: #e74c3c;
-$silver: #bebebe;
-
-$grey-hover: #333;
-$red-hover: #c0392b;
-
-$gray-text: #777;
-$gray-headline: #555;
-$light-gray-text: #eee;
-$dark-gray: #585f69;
-$link-hover-color: #f82805;
-$light-gray: #fcfcfc;
-$footer-gray: #333;
-
-$highlight: 0 1px 0 $white;
-$green-highlight: #00b819;
-
-// Function definitions
-$border: #ccc;
-$text-color: $black;
-$border-color: $black;
-$box-color: $main-color;
+// https://getbootstrap.com/docs/4.0/getting-started/theming/
+$theme-colors: (
+  "primary": #0074d9,
+  "danger": #c0392b,
+  "orange": #eb7125,
+  "highlight": <%= Settings.css.highlight_color %>,
+);
