--- a/app/assets/stylesheets/style/custom.scss
+++ b/app/assets/stylesheets/style/custom.scss
@@ -1,3 +1,9 @@
+p,
+li {
+  color: gray('600');
+  line-height: 1.6;
+}
+
 .fa-agenda {
   &::before {
     content: '§';
@@ -7,16 +13,6 @@
 
 .select2-container {
   max-width: 100%;
-}
-
-.round-icon {
-  border: 50px;
-  border-radius: 50%;
-  font-size: 18px;
-  height: 22px;
-  line-height: 22px;
-  text-align: center;
-  width: 22px;
 }
 
 .text-1 {
@@ -37,4 +33,8 @@
 
 .text-5 {
   font-size: 2rem;
+}
+
+.text-orange {
+  color: theme-color('orange');
 }
