--- a/app/assets/stylesheets/style/headline.scss
+++ b/app/assets/stylesheets/style/headline.scss
@@ -7,8 +7,8 @@
   h3,
   h4,
   h5 {
-    border-bottom: 2px solid $main-color;
-    color: $gray-headline;
+    border-bottom: 2px solid theme-color('primary');
+    color: gray('700');
     display: inline-block;
     margin: 0 0 -2px;
     padding-bottom: 5px;
